# OCI-AI-AGENT-AG-UI

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: adk.py  adk_rag&tool.py  env.example  main.py  tool.py  tools.py
frontend/: package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/copilotkit/: route.ts
